syntax = "proto3";

option go_package = "smapp/common/grpc/user";

service User {
    rpc GetFollowed(GetFollowedRequest) returns (GetFollowedResponse);
}

message GetFollowedRequest {
    bytes user_id = 1;
}

message GetFollowedResponse {
    repeated bytes user_ids = 1;
}